force-app/main/default/objects/CodePromo__c/CodePromo__c.object-meta.xml
<CustomObject>
    <label>Code Promo</label>
    <nameField>
        <label>Libellé Promo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes Promo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>