force-app/main/default/objects/CodePromo__c/fields/Campagne__c.field-meta.xml
<CustomField>
    <fullName>Campagne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagne</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Codes Promo</relationshipLabel>
    <relationshipName>Codes_Promo</relationshipName>
    <type>Lookup</type>
</CustomField>