force-app/main/default/objects/CodePromo__c/fields/CodeCoupon__c.field-meta.xml
<CustomField>
    <fullName>CodeCoupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Coupon</label>
    <referenceTo>Codecoupon__c</referenceTo>
    <relationshipLabel>Codes Promo</relationshipLabel>
    <relationshipName>Codes_Promo</relationshipName>
    <type>Lookup</type>
</CustomField>