force-app/main/default/objects/CodePromo__c/fields/Datededebutvaliditepromo__c.field-meta.xml
<CustomField>
    <fullName>Datededebutvaliditepromo__c</fullName>
    <label>Date de début validité promo</label>
    <type>Date</type>
</CustomField>