force-app/main/default/objects/CodePromo__c/fields/Datedefinvaliditepromo__c.field-meta.xml
<CustomField>
    <fullName>Datedefinvaliditepromo__c</fullName>
    <label>Date de fin validité promo</label>
    <type>Date</type>
</CustomField>