force-app/main/default/objects/CodePromo__c/recordTypes/FRACodePromo.recordType-meta.xml
<RecordType>
    <fullName>FRACodePromo</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement par défaut pour un Code Promo</description>
    <label>FRA- Code Promo</label>
</RecordType>